Closed
Bug 165036
Opened 23 years ago
Closed 23 years ago
"create new folder" in bookmarks toolbar context menu doesn't work when pointer is over bookmark
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: bugzilla, Assigned: sfraser_bugs)
Details
found using 2002.08.27.05. "create new folder" in bookmarks toolbar context menu
doesn't appear to work.
couldn't find an existing bug on this, but if it is a dup, go ahead and mark
appropriately!
1. bring up the context menu for the bookmarks toolbar in the the browser window.
2. select "create new folder"
actual results: nothing happens.
expected: a sheet for creating a new bookmarks folder should come down...or
should it? should this item be implemented, or removed from this particular
context menu?
| Reporter | ||
Comment 1•23 years ago
|
||
okay, here's another one for "erratic to reproduce". :-/
when i encountered this, the sidebar was open. for grins, i closed the sidebar,
and tried again --and was able to get the sheet to appear for "create new
folder". then, after subsequent attempts (with the sidebar opened and closed a
couple of times), it worked.
| Reporter | ||
Comment 2•23 years ago
|
||
revised steps:
1. quit and restart chimera.
2. bring up the context menu for the bookmarks toolbar in the the browser window.
2. select "create new folder"
actual results: nothing happens.
Comment 3•23 years ago
|
||
I confirm the same behavior on XP on build Mozilla/5.0 (Windows; U; Windows NT
5.1; en-US; rv:1.2b) Gecko/20020923 Phoenix/0.1
| Reporter | ||
Comment 4•23 years ago
|
||
this seems to be working, sort of, using chimera 0.6. one thing to make sure:
the sheet for creating a new bm folder does appear, but the pointer needs to be
over a blank (non-icon, non-bookmark label) region of the toolbar when selecting
the item from the context menu. otherwise, the sheet will not appear.
| Assignee | ||
Comment 5•23 years ago
|
||
WFM now.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 6•23 years ago
|
||
Reopening. You have to context-click on an item in the BM toolbar (and have not
selected anything in the sidebar) for this to break.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Reporter | ||
Updated•23 years ago
|
Summary: "create new folder" in bookmarks toolbar context menu doesn't work → "create new folder" in bookmarks toolbar context menu doesn't work when pointer is over bookmark
| Assignee | ||
Comment 8•23 years ago
|
||
Fixed 'Create new folder' for context-clicks on buttons and empty space in the
BM toolbar to do the right thing (defaulting to the Toolbar bookmarks folder).
Status: NEW → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•23 years ago
|
||
vrfy'd fixed on 10.2.1 with 2002.11.08.04.
when the pointer is over a bookmark, bookmark group or nothing, "create new
folder" creats a folder at the top level.
when the pointer is over a bookmark folder, "create new folder" creates a folder
as a child of the folder underneath the pointer.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•