Fix bug 165036 -- make 'Create new folder' work for the bookmarks toolbar. Also removing some errant NSLogs from earlier checkins.